fix horzontal scrollbar in section-incredients-welcome

--- a/carbonara.css
+++ b/carbonara.css
@@ -50,7 +50,6 @@ h1, h2, h3{
 }
 .divider{
     height: 1px;
-    width: 100vw;
     background-color: rgb(239, 239, 239);
     margin-bottom: 8px;
 }
